tests/snapshots/integration__integration_tests__post_start_commands__post_create_failing_command.snap
---
source: tests/integration_tests/post_start_commands.rs
info:
  program: wt
  args:
    - switch
    - "--create"
    - feature
  env:
    APPDATA: "[TEST_CONFIG_HOME]"
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    HOME: "[TEST_HOME]"
    LANG: C
    LC_ALL: C
    PATH: "[PATH]"
    SOURCE_DATE_EPOCH: "1735776000"
    USERPROFILE: "[TEST_HOME]"
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
    XDG_CONFIG_HOME: "[TEST_CONFIG_HOME]"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
🔄 [36mRunning project post-create:[39m
[107m [0m  [2m[0m[2m[34mexit[0m[2m 1
[0m🟡 [33mCommand failed: exit status: 1[39m
✅ [32m[32mCreated new worktree for [1mfeature[22m from [1mmain[22m @ [1m[REPO].feature[39m[22m[39m
💡 [2mRun [90mwt config shell install[39m to enable automatic cd[22m
