tests/snapshots/integration__integration_tests__post_start_commands__post_create_multiline_control_structure.snap
---
source: tests/integration_tests/post_start_commands.rs
info:
  program: wt
  args:
    - switch
    - "--create"
    - feature
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: /dev/null
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1761609600"
    WORKTRUNK_CONFIG_PATH: /var/folders/wf/s6ycxvvs4ln8qsdbfx40hnc40000gn/T/.tmplIcGuI/test-config.toml
---
success: true
exit_code: 0
----- stdout -----
🔄 [36mRunning post-create:[0m
[40m [0m  [1m[35mif[0m [ ! -f test.txt ]; [1m[35mthen[0m[1m[35m[0m[0m
[40m [0m    [1m[34mecho[0m [32m'File does not exist'[0m [36m>[0m result.txt[0m
[40m [0m  [1m[34melse[0m[0m
[40m [0m    [1m[34mecho[0m [32m'File exists'[0m [36m>[0m result.txt[0m
[40m [0m  [1m[34mfi[0m[0m

✅ [32mCreated new worktree for [1m[32mfeature[0m[32m at [1m[32m[REPO].feature[0m[0m

To enable automatic cd, run: wt config shell

----- stderr -----
[0m
