tests/snapshots/integration__integration_tests__post_start_commands__post_create_named_commands.snap
---
source: tests/integration_tests/post_start_commands.rs
info:
  program: wt
  args:
    - switch
    - "--create"
    - feature
  env:
    CLICOLOR_FORCE: "1"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: /dev/null
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    HOME: /var/folders/wf/s6ycxvvs4ln8qsdbfx40hnc40000gn/T/.tmpYddzNM
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1704067200"
---
success: true
exit_code: 0
----- stdout -----
✅ [32mCreated new worktree for [1mfeature[0m
  [2mPath: [REPO]/../test-repo.feature[0m[0m

To enable automatic cd, run: wt configure-shell

----- stderr -----

🟡 [33mPermission required to execute in worktree[0m

[1mtest-repo[0m ([2mtest-repo[0m) wants to execute:
[40m [0m echo 'Installing deps'

💡 Allow and remember? [1m[y/N][0m [2mSkipping command: echo 'Installing deps'[0m

🟡 [33mPermission required to execute in worktree[0m

[1mtest-repo[0m ([2mtest-repo[0m) wants to execute:
[40m [0m echo 'Running setup'

💡 Allow and remember? [1m[y/N][0m [2mSkipping command: echo 'Running setup'[0m
